--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Hello 你好!</h1>
+<p>email: bflib@qq.com</p>
+<p>
+    <a href=".\html\colorpicker v2.html">均匀色彩计算工具</a>
+</p>
+
 </body>
 </html>
