--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon" type="image/x-icon" href=".\img\favicon\tea.ico" />
+    <meta name="theme-color" content="#ffffff">
+    <title>BFLIB</title>
+    <!-- Google tag (gtag.js) [defer: 页面加载完毕后再运行] -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-RP9QD7YDZN"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-RP9QD7YDZN');
+    </script>
+    <!-- 预链接 -->
+    <link href="/" rel="preconnect" crossorigin />
+</head>
 <body>
-<h1>Hello 你好!</h1>
+<h1>BFLIB</h1>
 <p>email: bflib@qq.com</p>
 <p>
     <a href=".\html\colorpicker v2.html">均匀色彩计算工具</a>
