--- a/index.html
+++ b/index.html
@@ -18,11 +18,16 @@
 </head>
 <body>
 
-<h1>BFLIB</h1>
-<p>email: bflib@qq.com</p>
-<p>
-    <a href=".\html\colorpicker v2.html">均匀色彩计算工具</a>
-</p>
+<h1 style="padding: 0px 24px 0px 24px;">BFLIB</h1>
+<hr />
+
+
+<div style="padding: 0px 24px 0px 24px;">
+    <p>email: bflib@qq.com</p>
+    <ul>
+        <li><a href=".\html\colorpicker v2.html">均匀色彩计算工具</a></li>
+    </ul>
+</div>
 
 </body>
 </html>
