--- a/html/colorpicker.html
+++ b/html/colorpicker.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/x-icon" href=".\img\favicon\tea.ico" />
     <link rel="stylesheet" type="text/css" href="..\css\css_1.css">
     <title>COLOR PICKER</title>
-    <!-- Version 3.1(23-2-26) -->
+    <!-- Version 0.3 (23-2-26) -->
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RP9QD7YDZN"></script>
     <script>
@@ -46,7 +46,7 @@
                 height: 56px;
                 left: 168px;
                 top: 16px;">
-                <label class="input_ih txt_input">H</label>
+                <label class="input_ih txt_input" style="user-select: none;">H</label>
                 <input id="input_hue" class="input_ib txt_input" type="number" value="240">
                 </input>
             </div>
@@ -57,7 +57,7 @@
                 height: 56px;
                 left: 168px;
                 top: 92px;">
-                <label class="input_ih txt_input">C</label>
+                <label class="input_ih txt_input" style="user-select: none;">C</label>
                 <input id="input_chroma" class="input_ib txt_input" type="number" value="10"></input>
             </div>
 
@@ -67,13 +67,13 @@
                 height: 56px;
                 left: 168px;
                 top: 168px;">
-                <label class="input_ih txt_input">L</label>
+                <label class="input_ih txt_input" style="user-select: none;">L</label>
                 <input id="input_lightness" class="input_ib txt_input" type="number" value="65"></input>
             </div>
         </div>
 
         <!-- gamut_l_copy -->
-        <div class="div_ver" style="left: 394px; top: 2px;">
+        <div class="div_ver" style="left: 394px; top: 2px;" >
             <canvas id="gamut_l_copy" width="24px" height="240px"></canvas>
         </div>
         <!-- gamut_hl -->
