--- a/index.html
+++ b/index.html
@@ -21,11 +21,10 @@
 <h1 style="padding: 0px 24px 0px 24px;">BFLIB</h1>
 <hr />
 
-
 <div style="padding: 0px 24px 0px 24px;">
     <p>email: bflib@qq.com</p>
     <ul>
-        <li><a href=".\html\colorpicker v2.html">均匀色彩计算工具</a></li>
+        <li><a href=".\html\colorpicker.html">均匀色彩计算工具</a></li>
     </ul>
 </div>
 
