--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href=".\img\favicon\tea.ico" />
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" type="text/css" href=".\css\css_1.css">
     <title>BFLIB</title>
-    <!-- Google tag (gtag.js) [defer: 页面加载完毕后再运行] -->
+    <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-RP9QD7YDZN"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
@@ -18,15 +19,31 @@
 </head>
 <body>
 
-<h1 style="padding: 0px 24px 0px 24px;">BFLIB</h1>
-<hr />
+<div class="div_main txt_nor">
 
-<div style="padding: 0px 24px 0px 24px;">
-    <p>email: bflib@qq.com</p>
-    <ul>
-        <li><a href=".\html\colorpicker.html">均匀色彩计算工具</a></li>
-    </ul>
+    <div class="div_1">
+        <h1>目前只有一个项目</h1>
+        <p class="h1_sub">Email: bflib@qq.com</p>
+    </div>
+    <div class="div_4">
+        <h2>列表</h2>
+        <div class="div_2">
+            <p class="txt_b">╳　<a href=".\html\colorpicker.html">均匀色彩计算工具</a></p>
+            <div class="div_2">
+                <p>　│　使用<a href="https://bottosson.github.io/">OKLAB色彩空间</a>分析颜色</p>
+                <p>　│　亮度定义参考: <a href="https://bottosson.github.io/posts/colorpicker/">《Okhsv and Okhsl》</a></p>
+                <p>　╰　使用chatGPT辅助编写的代码</p>
+            </div>
+        </div>
+    </div>
+    
+    <div style="opacity: 0.25;">
+        <img style="width: 64px;" src=".\img\tea.png" title="嗯?" alt="tea">
+    </div>
+    
+
 </div>
+
 
 </body>
 </html>
