--- a/html/colorpicker.html
+++ b/html/colorpicker.html
@@ -16,6 +16,8 @@
     </script>
 </head>
 <body>
+    <!-- <body onload="f();"> 页面加载完成后立即调用的函数 -->
+        <!-- 初始化页面元素、获取用户输入或向服务器发送请求等 -->
     <div style="position: relative;">
 
         <!-- colorvalue -->
@@ -187,5 +189,15 @@
 <script src="..\js\d3.min.js"></script>
 <script src="..\js\color_conversion.js"></script>
 <script src="..\js\control.js"></script>
+
+<script>
+/*
+        function update_url()
+        {
+            history.replaceState(null, null, rgb_to_hex(r,g,b));
+        }       // 将RGB写入URL
+*/
+
+</script>
 
 </html>
