--- a/index.html
+++ b/index.html
@@ -28,11 +28,17 @@
     <div class="div_4">
         <h2>列表</h2>
         <div class="div_2">
-            <p class="txt_b">╳　<a href=".\html\colorpicker.html">均匀色彩计算工具</a></p>
+            <p class="txt_b">╳　<a href=".\html\colorpicker_v1.html">均匀色彩计算工具</a></p>
             <div class="div_2">
                 <p>　│　使用<a href="https://bottosson.github.io/">OKLAB色彩空间</a>分析颜色</p>
                 <p>　│　亮度定义参考: <a href="https://bottosson.github.io/posts/colorpicker/">《Okhsv and Okhsl》</a></p>
                 <p>　╰　使用chatGPT辅助编写的代码，目前因为卡顿，降低了绘图精度</p>
+            </div>
+        </div>
+        <div class="div_2">
+            <p class="txt_b">╳　<a href=".\html\z_demo_gamut_v2.html">均匀色彩计算工具 版本其二(预览demo)</a></p>
+            <div class="div_2">
+                <p>　╰　启动时较为卡顿, 预想中 运行时保持高精度绘图 的同时 更流畅</p>
             </div>
         </div>
     </div>
