--- a/html/z_demo_gamut_v1.html
+++ b/html/z_demo_gamut_v1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="..\js\d3.min.js"></script>
     <script src="..\js\color_conversion.js"></script>
 </head>
 <body>
