--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="div_2">
                 <p>　│　使用<a href="https://bottosson.github.io/">OKLAB色彩空间</a>分析颜色</p>
                 <p>　│　亮度定义参考: <a href="https://bottosson.github.io/posts/colorpicker/">《Okhsv and Okhsl》</a></p>
-                <p>　╰　使用chatGPT辅助编写的代码，目前因为卡顿，降低了绘图精度</p>
+                <p>　╰　从0基础编写的代码，目前因为卡顿，降低了绘图精度</p>
             </div>
         </div>
         <div class="div_2">
