--- a/html/z_demo_gamut_v2.html
+++ b/html/z_demo_gamut_v2.html
@@ -253,6 +253,36 @@ var text = svg.append("text")
   .attr("y", 50)
   .text(myNumber);
 
+/*
+色彩及视觉研究 实验室与数据库 http://www.cvrl.org/
+
+亮度 Lightness (value, greyscale value, tone ):
+    被照明区 与 近似白色或高透光的被照明区域区域明度 的 相对明度
+    即 类似照明下 与 白色物体漫反射光量 的 相对漫反射光量
+    即 感知漫反射率
+
+    亮度衡量: CIE L* 与 孟塞尔value 近似.
+                孟塞尔value 相对于 理论完美的白色反射器的亮度 计算,
+                CIE L* 取实际的类似标准反射器. 因此 孟塞尔value=10 略微亮于 CIE L*=100
+
+                
+色相 Hue : 光相相对日光的 长中短波长刺激值偏差, 物体相对中性反光谱物的 光谱反射率
+
+明度 Brightness: 可见光能量 (不同波长有不同加权)
+
+亮度/灰值 Lightness (Greyscale value): 漫反射率
+
+彩度 Colourfulness: 光的 长中短波长分量 于 日光 的 绝对差值
+
+饱和 Saturation: 正比亮度
+
+色度 Chroma:
+
+辉度 Brilliance: 
+
+
+*/
+
 </script>
 
 </html>
