--- a/html/z_demo_gamut_v2.html
+++ b/html/z_demo_gamut_v2.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <link rel="icon" type="image/x-icon" href="..\img\favicon\tea.ico" />
-    <title>COLOR PICKER</title>
+    <title>COLOR PICKER 0.4</title>
     <!-- Version 0.4 (2023-8-10) -->
     <script src="..\js\d3.min.js"></script>
     <script src="..\js\color_conversion.js"></script>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-RP9QD7YDZN"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-RP9QD7YDZN');
+</script>
 <body>
     <!-- 等明度面 (色相|色度) -->
     <canvas id="canvas_hc"></canvas>
